Working ajax, change to css
Joshua got the ajax working and I stylized it a bit and added a button that when pressed will go to a webform page, that will eventually post and append that new info to the table... to do this we have to figure out how to append to the json file and create a new person object. I will look up how to do this.

--- a/final1/test1.html
+++ b/final1/test1.html
@@ -5,13 +5,27 @@
         <title>Practicing with jQuery</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
         <script src="scripts/jquery-3.2.1.js"></script>
-        <script src="scripts/jquery.dataTables.min.js"></script>
         <script src="scripts/jquery.js"></script>
+        <script src="scripts/jquery.dataTables.min.js"></script>
+
+        <link rel="stylesheet" type="text/css" href="global.css">
     </head>
     <body>
       <header>
-        <h1>Tutor Database</h1>
+        <h1 id="title">Tutor Database</h1>
+        <div id="webButton">
+        <input type="submit" value="Add A Request"/>
+      </div>
       </header>
+      <div id="paddingtop">
+      </div>
+      <div id="container">
       <table id="example" class="display" width="100%"></table>
+      </div>
+      <div id="bottompadding">
+      </div>
+      <footer>
+        <p>Created by Conner Ledbetter and Clinton Peterson</p>
+      </footer>
     </body>
 </html>
