--- a/final1/test1.html
+++ b/final1/test1.html
@@ -7,23 +7,23 @@
         <script src="scripts/jquery-3.2.1.js"></script>
         <script src="scripts/jquery.js"></script>
         <script src="scripts/jquery.dataTables.min.js"></script>
-
+        <script src="buttonstuff.js"></script>
         <link rel="stylesheet" type="text/css" href="global.css">
     </head>
     <body>
       <header>
         <h1 id="title">Tutor Database</h1>
         <div id="webButton">
-        <input type="submit" value="Add A Request"/>
-      </div>
+          <form action="webform.html">
+            <input type="submit" value="Add A Request" id="addTicket"/>
+          </form>
+        </div>
       </header>
-      <div id="paddingtop">
-      </div>
+      <div id="paddingtop"></div>
       <div id="container">
-      <table id="example" class="display" width="100%"></table>
+        <table id="example" class="display" width="100%"></table>
       </div>
-      <div id="bottompadding">
-      </div>
+      <div id="bottompadding"></div>
       <footer>
         <p>Created by Conner Ledbetter and Clinton Peterson</p>
       </footer>
