--- a/final1/webform.html
+++ b/final1/webform.html
@@ -5,6 +5,11 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="global.css">
   <link rel="stylesheet" type="text/css" href="webform.css">
+
+  <script src="scripts/jquery-3.2.1.js"></script>
+  <script src="scripts/jquery.js"></script>
+  <script src="scripts/jquery.dataTables.min.js"></script>
+  <script src="buttonstuff.js"></script>
 </head>
 <body>
   <header>
@@ -18,27 +23,24 @@
   <div id="paddingtop"></div>
   <div id="container">
     <h1 id="title">Please Enter Information For Your Ticket</h1>
-    <form id="uForm" method="post">
-      <fieldset id="uInfo">
-        <legend>User Information</legend>
-        <label for="name">Full Name *</label>
-        <input name="name" id="name" type="text" size="40" required/>
+
+        Full Name:
+        <input name="name" id="name" type="text" size="40">
         <br/>
-        <label for="subject">What You Would Like Help In *</label>
-        <input name="subject" id="subject" type="text" size="20" required/>
+        What You Would Like Help In:
+        <input name="subject" id="subject" type="text" size="20">
          <br/>
-        <label for="location">Prefered Meeting Location *</label>
-        <input name="location" id="location" type="text" size="20" required/>
+        Prefered Meeting Location:
+        <input name="location" id="location" type="text" size="20">
           <br/>
-        <label for="pNumber">Phone Number *</label>
-        <input name="pNumber" id="pNumber" type="text" size="20" required/>
+        Phone Number:
+        <input name="pNumber" id="pNumber" type="text" size="20">
          <br/>
-        <label for="availability">What Time You Are Available *</label>
-        <input name="availability" id="availability" type="text" size="20" required/>
+        What Time You Are Available:
+        <input name="availability" id="availability" type="text" size="20">
           <br/>
           <br/>
-           <input type="submit" value="Submit" id="submit"/>
-        </fieldset>
+           <button id="submit" onclick="validateForm()">Submit</button>
       </div>
     <div id="bottompadding"></div>
     <footer>
