Final update(I think)
Cant fix the error when you first come to the website, have a way to have it not show but its just by submitting a webform first and then going to the homepage. (I can make it look like it doesnt happen while presenting)

Other than that It is pretty much done, I commented everything, I can do the explaining tonight.

But I'm just done with the project for now, don't think we have the knowledge and tools to do what the orginal plan was.

--- a/final1/test1.html
+++ b/final1/test1.html
@@ -1,29 +1,45 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <title>Practicing with jQuery</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
-        <script src="scripts/jquery-3.2.1.js"></script>
-        <script src="scripts/jquery.js"></script>
-        <script src="scripts/jquery.dataTables.min.js"></script>
-        <script src="buttonstuff.js"></script>
-        <link rel="stylesheet" type="text/css" href="global.css">
+      <!--
+      Conner Ledbetter and Clinton Peterson
+      12/13/17
+      test1.html
+
+      This is the main homepage that contains the table for our tutor website
+      -->
+      <!--Scripts and Styles-->
+      <meta charset="utf-8">
+      <title>Practicing with jQuery</title>
+      <link rel="stylesheet" type="text/css" href="styles.css">
+      <script src="scripts/jquery-3.2.1.js"></script>
+      <script src="scripts/jquery.js"></script>
+      <script src="scripts/jquery.dataTables.min.js"></script>
+      <script src="buttonstuff.js"></script>
+      <link rel="stylesheet" type="text/css" href="global.css">
+
+      <title>Ttr Fndr</title>
     </head>
     <body>
       <header>
-        <h1 id="title">Tutor Database</h1>
+        <!--Website heading-->
+        <h1 id="title">Ttr Fndr</h1>
+        <!--Button to go to webform-->
         <div id="webButton">
+          <!--When button is clicked go to the webform-->
           <form action="webform.html">
-            <input type="submit" value="Add A Request" id="addTicket"/>
+            <input type="submit" value="Add A Request" id="addTicket" onclick="counter();"/>
           </form>
         </div>
       </header>
+      <!--Some padding-->
       <div id="paddingtop"></div>
       <div id="container">
+        <!--Our tutor's table-->
         <table id="example" class="display" width="100%"></table>
       </div>
       <div id="bottompadding"></div>
+      <!--Footer-->
       <footer>
         <p>Created by Conner Ledbetter and Clinton Peterson</p>
       </footer>
